--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>🚀𝘼𝙐𝙏𝙊𝘽𝙊𝙏 -</title>
+      <title>ℕ𝕖𝕨 𝔸𝕦𝕥𝕠𝕓𝕠𝕥 𝕓𝕪 𝕄𝕖𝕥𝕠𝕦𝕤𝕙𝕖𝕝𝕒 𝕨𝕒𝕝𝕜𝕖𝕣-</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
@@ -10,14 +10,14 @@
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">𝗛𝗢𝗠𝗘▪ </a>
+         <a class="navbar-brand" href="#">ᕼOᗰᗴ </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 70px;">
             <ul class="navbar-nav">
                <li class="nav-item active">
-                  <a class="nav-link" href="/">HOME[💬] <span class="sr-only">(current)</span>
+                  <a class="nav-link" href="/">ᕼOᗰᗴ[💬] <span class="sr-only">(current)</span>
                   </a>
                </li>
                <li class="nav-item dropdown">
