--- a/public/developer.html
+++ b/public/developer.html
@@ -48,11 +48,11 @@
 <div class='center' id='cover'>
 <div id='bg-cover'></div>
 <div id='avatar'>
-<img alt='avt' src='../image/2.png'/>
+<img alt='avt' src='../public/1.jpg'/>
 </div>
 </div>
 <div id='content'>
-<!-- info --><div style="font-size: 23px">
+<!-- info --><distyle="font-size: 23px">
 <script type="text/javascript">
 farbbibliothek = new Array();
 farbbibliothek[0] = new Array("#FF0000","#FF1100","#FF2200","#FF3300","#FF4400","#FF5500","#FF6600","#FF7700","#FF8800","#FF9900","#FFaa00","#FFbb00","#FFcc00","#FFdd00","#FFee00","#FFff00","#FFee00","#FFdd00","#FFcc00","#FFbb00","#FFaa00","#FF9900","#FF8800","#FF7700","#FF6600","#FF5500","#FF4400","#FF3300","#FF2200","#FF1100");
