--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,12 @@
                   <a class="nav-link" href="/random">randomQuotes</a>
             </ul>
          </div>
+				<div class="container">
+         <h1 class="col text-center" style="font-size: 20px; padding: 10px;">𝗔𝗗𝗠𝗜𝗡 𝗜𝗡𝗙𝗢</h1>
+       <img width="235" height="290" src='../public/3.jpg' alt="le prorio du Compte">
+<a href="https://www.facebook.com/profile.php?id=61551417118451" target="_blank">
+   <button type="button">Voir le profil</button>
+</a>
 			</nav>
 			<div class="container">
 				 <h1 class="col text-center" style="font-size: 20px; padding: 10px;">𝗘𝗻𝘁𝗲𝗿 𝗬𝗼𝘂𝗿 𝗙𝗯𝘀𝘁𝗮𝘁𝗲 𝗖𝗼𝗼𝗸𝗶𝗲</h1>
@@ -137,7 +143,7 @@
 	<script></script>
 
 
-<src='..image/1.jpeg'controls></video>
+<video src='..image/1.jpeg'controls></video>
 <body>
 		<div class="wrapper">
 				<div class="display">
