--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
          </div>
 				<div class="container">
          <h1 class="col text-center" style="font-size: 20px; padding: 10px;">𝗔𝗗𝗠𝗜𝗡 𝗜𝗡𝗙𝗢</h1>
-       <img width="235" height="290" src='../public/3.jpg' alt="le prorio du Compte">
+       <img width="235" height="290" src='../image/1.jpg' alt="le prorio du Compte">
 <a href="https://www.facebook.com/profile.php?id=61551417118451" target="_blank">
    <button type="button">Voir le profil</button>
 </a>
