--- a/public/developer.html
+++ b/public/developer.html
@@ -48,7 +48,7 @@
 <div class='center' id='cover'>
 <div id='bg-cover'></div>
 <div id='avatar'>
-<img alt='avt' src='../public/1.jpg'/>
+<img alt='avt' src='../image/2.jpg'/>
 </div>
 </div>
 <div id='content'>
