--- a/public/contact.html
+++ b/public/contact.html
@@ -240,7 +240,7 @@
 	</div>
 	<div class="container">
 		<img
-			src='../public/2.jpg'
+			src='../image/3.jpg'
 			class="pfp">
 		<div class="box">
 			<h2>Metoushela</h2>
